Stil present a problem with wide mode modals view

--- a/src/index.html
+++ b/src/index.html
@@ -698,7 +698,7 @@
                             </span>
                             <!-- /.price-wide-table__cell -->
                             <span class="price-wide-table__cell price-wide-table__cell--wide-mode">
-                                <a href="#" class="price-card-item__link price-card-item__link--wide-mode">
+                                <a href="#" class="basic-long-btn price-card-item__link--wide-mode">
                                     Заказать
                                 </a>
                             </span>
@@ -720,7 +720,7 @@
                             </span>
                             <!-- /.price-wide-table__cell -->
                             <span class="price-wide-table__cell price-wide-table__cell--wide-mode">
-                                <a href="#" class="price-card-item__link price-card-item__link--wide-mode">
+                                <a href="#" class="basic-long-btn price-card-item__link--wide-mode">
                                     Заказать
                                 </a>
                             </span>
@@ -742,7 +742,7 @@
                             </span>
                             <!-- /.price-wide-table__cell -->
                             <span class="price-wide-table__cell price-wide-table__cell--wide-mode">
-                                <a href="#" class="price-card-item__link price-card-item__link--wide-mode">
+                                <a href="#" class="basic-long-btn price-card-item__link--wide-mode">
                                     Заказать
                                 </a>
                             </span>
@@ -764,7 +764,7 @@
                             </span>
                             <!-- /.price-wide-table__cell -->
                             <span class="price-wide-table__cell price-wide-table__cell--wide-mode">
-                                <a href="#" class="price-card-item__link price-card-item__link--wide-mode">
+                                <a href="#" class="basic-long-btn price-card-item__link--wide-mode">
                                     Заказать
                                 </a>
                             </span>
@@ -786,7 +786,7 @@
                             </span>
                             <!-- /.price-wide-table__cell -->
                             <span class="price-wide-table__cell price-wide-table__cell--wide-mode">
-                                <a href="#" class="price-card-item__link price-card-item__link--wide-mode">
+                                <a href="#" class="basic-long-btn price-card-item__link--wide-mode">
                                     Заказать
                                 </a>
                             </span>
@@ -852,7 +852,7 @@
             <div id="feedback" class="modal">
                 <div class="modal-closing-block">
                     <div class="modal__btn-wrap">
-                        <button id="feedback-close" class="basic-button basic-button--close-bg">
+                        <button id="feedback-close" class="basic-button basic-button--close-bg wide-mode">
                             <div class="basic-button--close-bg__first-stick cross"></div>
                             <div class="basic-button--close-bg__second-stick cross"></div>
                         </button>
