Finished to fix my project, almoust

--- a/src/index.html
+++ b/src/index.html
@@ -852,7 +852,7 @@
                
                 <div class="modal-closing-block">
                     <div class="modal__btn-wrap">
-                        <button id="feedback-close" class="basic-button basic-button--close-bg wide-mode">
+                        <button id="feedback-close" class="basic-button basic-button--close-bg modal-mode">
                             <div class="basic-button--close-bg__first-stick cross"></div>
                             <div class="basic-button--close-bg__second-stick cross"></div>
                         </button>
@@ -913,7 +913,7 @@
             <div id="callback" class="modal">
                 <div class="modal-closing-block">
                     <div class="modal__btn-wrap">
-                        <button id="callback-close" class="basic-button basic-button--close-bg wide-mode">
+                        <button id="callback-close" class="basic-button basic-button--close-bg modal-mode">
                             <div class="basic-button--close-bg__first-stick cross"></div>
                             <div class="basic-button--close-bg__second-stick cross"></div>
                         </button>
