Progect after mentor refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
         <main class="main-container">
 
             <header id="header" class="header">
-                <div class="burger">
+                <div class="header__burger">
                     <button class="basic-button basic-button--burger-bg"></button>
                 </div>
                 <!-- /.button -->
@@ -701,7 +701,7 @@
             <!-- /.commercial-offer -->
         
             <footer class="footer">
-                <div class="footer-block">
+                <div class="footer-block left-txt-orient">
                     <a href="" class="footer-block__link">
                         © 2019 CPS <br/>
                         Разработано командой Apesong 
@@ -718,7 +718,7 @@
                 </div>
                 <!-- /.footer-block -->
         
-                <div class="footer-block">
+                <div class="footer-block right-txt-orient">
                     <a href="" class="footer-block__link">
                         Информация, размещенная на данной странице, не является публичной офертой
                     </a> 
