Include and used data-attr.

--- a/src/index.html
+++ b/src/index.html
@@ -731,14 +731,14 @@
         </main>
         <!-- /.main-container -->
 
-        <div class="modal-wrap">
+        <div class="modal-wrap" data-close="close">
             <div id="feedback" class="modal">
                
                 <div class="modal-closing-block">
                     <div class="modal__btn-wrap">
-                        <button id="feedback-close" class="basic-button basic-button--close-bg modal-mode">
-                            <div class="basic-button--close-bg__first-stick cross"></div>
-                            <div class="basic-button--close-bg__second-stick cross"></div>
+                        <button id="feedback-close" class="basic-button basic-button--close-bg modal-mode" data-close="close">
+                            <div class="basic-button--close-bg__first-stick cross" data-close="close"></div>
+                            <div class="basic-button--close-bg__second-stick cross" data-close="close"></div>
                         </button>
                     </div>
                     <!-- /.close -->
@@ -792,14 +792,14 @@
         </div>
         <!-- /.modal-wrap -->
 
-        <div class="modal-wrap">
+        <div class="modal-wrap" data-close="close">
 
             <div id="callback" class="modal">
                 <div class="modal-closing-block">
                     <div class="modal__btn-wrap">
-                        <button id="callback-close" class="basic-button basic-button--close-bg modal-mode">
-                            <div class="basic-button--close-bg__first-stick cross"></div>
-                            <div class="basic-button--close-bg__second-stick cross"></div>
+                        <button id="callback-close" class="basic-button basic-button--close-bg modal-mode" data-close="close">
+                            <div class="basic-button--close-bg__first-stick cross" data-close="close"></div>
+                            <div class="basic-button--close-bg__second-stick cross" data-close="close"></div>
                         </button>
                     </div>
                     <!-- /.close -->
